--- a/library_login/build.gradle
+++ b/library_login/build.gradle
@@ -13,7 +13,7 @@ android {
         minSdk 21
         targetSdk 31
         versionCode 1
-        versionName "1.0"
+        versionName "0.0.1"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -43,12 +43,13 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
 
+//本地打包的时候使用
 afterEvaluate {
     publishing {
         publications {
             release(MavenPublication) {
                 from components.release
-                groupId = 'com.zhz.library'
+                groupId = 'com.github.larboy1991'
                 artifactId = 'AopLogin'
                 version = '0.0.1'
             }
